# ClangBuildAnalyzer

./: CMakeLists.txt  ClangBuildAnalyzer.ini
src/: Analysis.cpp  BuildEvents.cpp  BuildEvents.h
tests/xcode-50/: _AnalysisOutputExpected.txt  test.json
